Schema migration (dbo→PiXL/ETL), SQL cleanup, ETL self-healing fix
Database:
- Migrated tables to PiXL.* schema (Test, Parsed, Config, Device, Company, Pixel)
- Migrated ETL objects to ETL.* schema (Watermark, usp_ParseNewHits)
- Added self-healing watermark reconciliation to ETL proc
- All 36 views updated to reference new schema names

SQL folder cleanup:
- Removed 11 dead/superseded migration scripts (4,581 lines)
- Rewrote 05_MaintenanceProcedures.sql for PiXL.Parsed + ETL.* schemas
- Added 17B_CreateSchemas.sql (schema migration script)
- Added 18_NvarcharToVarchar.sql (performance optimization)

C# changes:
- DatabaseWriterService: dbo.PiXL_Test → PiXL.Test
- EtlBackgroundService: dbo.usp_ParseNewHits → ETL.usp_ParseNewHits
- EtlBackgroundService: ExecuteNonQuery → ExecuteReader for proper result handling
- Renamed Tier5Script → PiXLScript across Scripts/Tests
- Updated comments and docs across all services

--- a/TrackingPixel.Modern/script-tiers.html
+++ b/TrackingPixel.Modern/script-tiers.html
@@ -318,8 +318,8 @@
         </div>
         <p><strong>Complexity: 5/5</strong> — External JS file. Most flexible but requires trust.</p>
         
-        <button class="copy-btn" onclick="copyCode('tier5')">📋 Copy</button>
-        <pre id="tier5">&lt;script src="https://smartpixl.com/js/12345/1.js" async&gt;&lt;/script&gt;</pre>
+        <button class="copy-btn" onclick="copyCode('pixl5')">📋 Copy</button>
+        <pre id="pixl5">&lt;script src="https://smartpixl.com/js/12345/1.js" async&gt;&lt;/script&gt;</pre>
         <p class="char-count">~70 characters (but loads external file)</p>
         
         <h4>Data Captured:</h4>
