fix: schema naming drift, Console.WriteLine → ITrackingLogger, HTTPS endpoint, test naming convention
Priority fixes:
- tron.html: EXEC usp_ParseNewHits → EXEC ETL.usp_ParseNewHits (3 locations)
- tron.html: UPDATE ETL_Watermark → UPDATE ETL.Watermark WHERE ProcessName
- DashboardEndpoints.cs: Console.WriteLine → ITrackingLogger (added _logger field)
- Program.cs: Console.WriteLine → logger.Info for startup banner
- appsettings.json: added HTTPS endpoint https://*:7001

Schema comment cleanup (PiXL_Table → PiXL.Table, ETL_Watermark → ETL.Watermark):
- InfraHealthModels.cs: ~30 XML doc references
- TrackingData.cs: file header comment
- DashboardEndpoints.cs: 3 inline comments

Documentation:
- InfraHealthService.cs: justified Task.Run usage in diagnostic probes
- README.md: SQL migration range 05-24 → 05-27
- MVP_ETL_PIPELINE_PLAN.md: SmartPixl.Clr → SmartPiXL.Clr

Test naming convention (Method_should_behavior_when_condition):
- Renamed 86 test methods across 7 test files

New files:
- CidrTrie.cs: CIDR prefix trie for datacenter IP matching
- PiXLScript-Reference.md: annotated JS template reference

Build: clean (0 errors) | Tests: 164/164 pass

--- a/TrackingPixel.Modern/wwwroot/tron.html
+++ b/TrackingPixel.Modern/wwwroot/tron.html
@@ -1488,7 +1488,7 @@ function drillPipeline(stage) {
     html += di('Last ETL Run', health?.etL_LastRunAt ? timeAgo(health.etL_LastRunAt) : '--');
     html += di('Synthetic Hits', num(health?.syntheticHits));
     html += '</div>';
-    html += sug('ETL runs every 60 seconds via EtlBackgroundService, calling usp_ParseNewHits. If lag is high, run manually:<br><code style="color:var(--cyan)">EXEC usp_ParseNewHits</code><br>If watermark is ahead of max Test ID, reset with:<br><code style="color:var(--cyan)">UPDATE ETL_Watermark SET LastProcessedId = 0</code>');
+    html += sug('ETL runs every 60 seconds via EtlBackgroundService, calling ETL.usp_ParseNewHits. If lag is high, run manually:<br><code style="color:var(--cyan)">EXEC ETL.usp_ParseNewHits</code><br>If watermark is ahead of max Test ID, reset with:<br><code style="color:var(--cyan)">UPDATE ETL.Watermark SET LastProcessedId = 0 WHERE ProcessName = \'ParseNewHits\'</code>');
     openModal('ETL PARSE STAGE', html);
   }
   else if (stage === 'dash') {
@@ -1726,9 +1726,9 @@ function getFixSuggestion(issue) {
   if (t.includes('service down')) return 'Restart the service from PowerShell:<br><code style="color:var(--cyan)">Start-Service "ServiceName"</code>';
   if (t.includes('endpoint down') || t.includes('endpoint unhealthy')) return 'Check IIS application pool status:<br><code style="color:var(--cyan)">Get-WebAppPoolState "Smartpixl.info"</code><br>If stopped:<br><code style="color:var(--cyan)">Start-WebAppPool "Smartpixl.info"</code>';
   if (t.includes('error')) return 'Check the application log for details:<br><code style="color:var(--cyan)">Get-Content "C:\\inetpub\\Smartpixl.info\\Log\\*.log" -Tail 50</code>';
-  if (t.includes('etl lag')) return 'Run the ETL manually:<br><code style="color:var(--cyan)">sqlcmd -S "localhost\\SQL2025" -d SmartPiXL -Q "EXEC usp_ParseNewHits"</code>';
+  if (t.includes('etl lag')) return 'Run the ETL manually:<br><code style="color:var(--cyan)">sqlcmd -S "localhost\\SQL2025" -d SmartPiXL -Q "EXEC ETL.usp_ParseNewHits"</code>';
   if (t.includes('match lag')) return 'Run the match proc manually:<br><code style="color:var(--cyan)">sqlcmd -S "localhost\\SQL2025" -d SmartPiXL -Q "EXEC ETL.usp_MatchVisits @BatchSize=1000"</code>';
-  if (t.includes('parse lag') && t.includes('pipeline')) return 'Run the parse proc manually:<br><code style="color:var(--cyan)">sqlcmd -S "localhost\\SQL2025" -d SmartPiXL -Q "EXEC ETL.usp_ParseNewHits @BatchSize=500"</code>';
+  if (t.includes('parse lag') && t.includes('pipeline')) return 'Run the parse proc manually:<br><code style="color:var(--cyan)">sqlcmd -S "localhost\\SQL2025" -d SmartPiXL -Q "EXEC ETL.usp_ParseNewHits"</code>';
   if (t.includes('no recent hit')) return 'Verify traffic is reaching the server. Send a test hit:<br><code style="color:var(--cyan)">Invoke-WebRequest "http://192.168.88.176/TEST/verify_SMART.GIF" -UseBasicParsing</code>';
   return null;
 }
