--- a/SmartPiXL.Sentinel/wwwroot/tron.html
+++ b/SmartPiXL.Sentinel/wwwroot/tron.html
@@ -1806,6 +1806,18 @@ body::before {
       <div id="infra-detail"><div class="loading">LOADING</div></div>
     </div>
 
+    <!-- Pipeline Health + Remediations -->
+    <div class="panel-grid half">
+      <div class="panel">
+        <div class="panel-title">PIPELINE HEALTH</div>
+        <div id="pipeline-health"><div class="loading">LOADING</div></div>
+      </div>
+      <div class="panel">
+        <div class="panel-title">REMEDIATIONS</div>
+        <div id="remediation-log"><div class="loading">LOADING</div></div>
+      </div>
+    </div>
+
     <!-- Live Feed (compact, 15 hits) -->
     <div class="panel" style="margin-bottom:24px;">
       <div class="panel-title">LIVE FEED â€” LAST 15 HITS</div>
@@ -1901,6 +1913,54 @@ body::before {
         <div id="a-etl-details" style="font-size:0.82rem;"><div class="loading">LOADING</div></div>
       </div>
     </div>
+
+    <!-- Sessions + Dead Internet -->
+    <div class="panel-grid half">
+      <div class="panel">
+        <div class="panel-title">SESSION ANALYSIS</div>
+        <div id="session-summary"><div class="loading">LOADING</div></div>
+      </div>
+      <div class="panel">
+        <div class="panel-title">DEAD INTERNET INDEX</div>
+        <div id="dead-internet"><div class="loading">LOADING</div></div>
+      </div>
+    </div>
+
+    <!-- Customer Quality + Cross-Customer -->
+    <div class="panel-grid half">
+      <div class="panel">
+        <div class="panel-title">CUSTOMER QUALITY</div>
+        <div id="customer-quality"><div class="loading">LOADING</div></div>
+      </div>
+      <div class="panel">
+        <div class="panel-title">CROSS-CUSTOMER INTEL</div>
+        <div id="cross-customer"><div class="loading">LOADING</div></div>
+      </div>
+    </div>
+
+    <!-- Impossible Travel + Device Lifecycle -->
+    <div class="panel-grid half">
+      <div class="panel">
+        <div class="panel-title">IMPOSSIBLE TRAVEL</div>
+        <div id="impossible-travel"><div class="loading">LOADING</div></div>
+      </div>
+      <div class="panel">
+        <div class="panel-title">DEVICE LIFECYCLE</div>
+        <div id="device-lifecycle"><div class="loading">LOADING</div></div>
+      </div>
+    </div>
+
+    <!-- Subnet Clusters + Device Hops -->
+    <div class="panel-grid half">
+      <div class="panel">
+        <div class="panel-title">SUBNET CLUSTERS</div>
+        <div id="subnet-clusters"><div class="loading">LOADING</div></div>
+      </div>
+      <div class="panel">
+        <div class="panel-title">DEVICE HOPS</div>
+        <div id="device-hops"><div class="loading">LOADING</div></div>
+      </div>
+    </div>
   </div>
 </div>
 
@@ -1929,6 +1989,17 @@ const API = {
   evasion:      () => fetchJson('/api/dash/evasion'),
   behavior:     () => fetchJson('/api/dash/behavior'),
   fingerprints: () => fetchJson('/api/dash/fingerprints?limit=12'),
+  sessions:     () => fetchJson('/api/dash/sessions'),
+  deadInternet: () => fetchJson('/api/dash/dead-internet'),
+  custQuality:  () => fetchJson('/api/dash/customer-quality'),
+  crossCustomer:() => fetchJson('/api/dash/cross-customer'),
+  crossDetail:  () => fetchJson('/api/dash/cross-customer/detail'),
+  impossTravel: () => fetchJson('/api/dash/impossible-travel'),
+  deviceLife:   () => fetchJson('/api/dash/device-lifecycle'),
+  deviceHops:   () => fetchJson('/api/dash/device-hops'),
+  subnets:      () => fetchJson('/api/dash/subnet-clusters'),
+  pipeline:     () => fetchJson('/api/dash/pipeline'),
+  remediations: () => fetchJson('/api/dash/remediations'),
 };
 
 let lastData = {};
@@ -3344,8 +3415,8 @@ function renderEvasion(data) {
 function renderBehavior(data) {
   const el = document.getElementById('behavior-compare');
   if (!data || !data.length) { el.innerHTML = '<div>No data</div>'; return; }
-  const human = data.find(d => d.classification && d.classification.includes('<50'));
-  const bot = data.find(d => d.classification && d.classification.includes('50'));
+  const human = data.find(d => d.classification && d.classification.startsWith('Human'));
+  const bot = data.find(d => d.classification && d.classification.startsWith('Bot'));
   const stat = (label, hv) => `<div class="behavior-stat"><span>${label}</span><span class="val">${hv??'--'}</span></div>`;
   const col = (title, cls, d) => `
     <div class="behavior-col">
@@ -3406,6 +3477,140 @@ function renderDevices(data) {
 }
 
 // ============================================================================
+// SESSIONS, DEAD-INTERNET, CUSTOMER-QUALITY, CROSS-CUSTOMER, IMPOSSIBLE-TRAVEL
+// DEVICE-LIFECYCLE, DEVICE-HOPS, SUBNET-CLUSTERS, PIPELINE, REMEDIATIONS
+// ============================================================================
+
+function renderSessions(rows) {
+    const el = document.getElementById('session-summary');
+    if (!el || !rows || !rows.length) { if (el) el.innerHTML = '<p style="color:var(--text-dim)">No session data</p>'; return; }
+    const cols = ['companyID','sessionDate','totalSessions','avgPagesPerSession','avgDurationSec','bounceRatePct'];
+    const labels = ['Company','Date','Sessions','Avg Pages','Avg Duration (s)','Bounce %'];
+    el.innerHTML = `<table class="feed-table"><thead><tr>${labels.map(l=>`<th>${l}</th>`).join('')}</tr></thead><tbody>${
+        rows.slice(0,50).map(r=>`<tr>${cols.map(c=>`<td>${r[c] != null ? (typeof r[c]==='number' ? num(r[c]) : r[c]) : '--'}</td>`).join('')}</tr>`).join('')
+    }</tbody></table>`;
+}
+
+function renderDeadInternet(rows) {
+    const el = document.getElementById('dead-internet');
+    if (!el || !rows || !rows.length) { if (el) el.innerHTML = '<p style="color:var(--text-dim)">No dead-internet data</p>'; return; }
+    const cols = ['companyID','weekStart','totalHits','zeroMouseHits','zeroMousePct','definiteBotHits','definiteBotPct','likelyHumanHits','likelyHumanPct'];
+    const labels = ['Company','Week','Hits','0-Mouse','0-Mouse %','Bot Hits','Bot %','Human Hits','Human %'];
+    el.innerHTML = `<table class="feed-table"><thead><tr>${labels.map(l=>`<th>${l}</th>`).join('')}</tr></thead><tbody>${
+        rows.slice(0,50).map(r=>`<tr>${cols.map(c=>`<td>${r[c] != null ? (typeof r[c]==='number' ? num(r[c]) : r[c]) : '--'}</td>`).join('')}</tr>`).join('')
+    }</tbody></table>`;
+}
+
+function renderCustomerQuality(rows) {
+    const el = document.getElementById('customer-quality');
+    if (!el || !rows || !rows.length) { if (el) el.innerHTML = '<p style="color:var(--text-dim)">No customer-quality data</p>'; return; }
+    const cols = ['companyID','piXLID','monthStart','totalHits','uniqueDevices','uniqueIPs','botPct','avgBotScore','avgAnomalyScore','definiteHumanHits','matchedVisitors'];
+    const labels = ['Company','PiXL','Month','Hits','Devices','IPs','Bot %','Bot Score','Anomaly','Human','Matched'];
+    el.innerHTML = `<table class="feed-table"><thead><tr>${labels.map(l=>`<th>${l}</th>`).join('')}</tr></thead><tbody>${
+        rows.slice(0,50).map(r=>`<tr>${cols.map(c=>`<td>${r[c] != null ? (typeof r[c]==='number' ? num(r[c]) : r[c]) : '--'}</td>`).join('')}</tr>`).join('')
+    }</tbody></table>`;
+}
+
+function renderCrossCustomer(rows) {
+    const el = document.getElementById('cross-customer');
+    if (!el || !rows || !rows.length) { if (el) el.innerHTML = '<p style="color:var(--text-dim)">No cross-customer data</p>'; return; }
+    const cols = Object.keys(rows[0]);
+    el.innerHTML = `<table class="feed-table"><thead><tr>${cols.map(c=>`<th>${c}</th>`).join('')}</tr></thead><tbody>${
+        rows.slice(0,50).map(r=>`<tr>${cols.map(c=>`<td>${r[c] != null ? (typeof r[c]==='number' ? num(r[c]) : r[c]) : '--'}</td>`).join('')}</tr>`).join('')
+    }</tbody></table>`;
+}
+
+function renderImpossibleTravel(rows) {
+    const el = document.getElementById('impossible-travel');
+    if (!el || !rows || !rows.length) { if (el) el.innerHTML = '<p style="color:var(--text-dim)">No impossible-travel data</p>'; return; }
+    const cols = Object.keys(rows[0]);
+    el.innerHTML = `<table class="feed-table"><thead><tr>${cols.map(c=>`<th>${c}</th>`).join('')}</tr></thead><tbody>${
+        rows.slice(0,50).map(r=>`<tr>${cols.map(c=>`<td>${r[c] != null ? (typeof r[c]==='number' ? num(r[c]) : r[c]) : '--'}</td>`).join('')}</tr>`).join('')
+    }</tbody></table>`;
+}
+
+function renderDeviceLifecycle(rows) {
+    const el = document.getElementById('device-lifecycle');
+    if (!el || !rows || !rows.length) { if (el) el.innerHTML = '<p style="color:var(--text-dim)">No device-lifecycle data</p>'; return; }
+    const cols = ['deviceHash','hitCount','companyCount','lifespanDays','daysSinceLastSeen','isDormant','firstSeen','lastSeen'];
+    const labels = ['Device','Hits','Companies','Lifespan (d)','Last Seen (d)','Dormant','First Seen','Last Seen'];
+    el.innerHTML = `<table class="feed-table"><thead><tr>${labels.map(l=>`<th>${l}</th>`).join('')}</tr></thead><tbody>${
+        rows.slice(0,50).map(r=>`<tr>${cols.map(c=>{
+            let v = r[c];
+            if (v == null) return '<td>--</td>';
+            if (c === 'isDormant') return '<td style="color:' + (v ? 'var(--orange)' : 'var(--green)') + ';">' + (v ? 'Yes' : 'No') + '</td>';
+            if (c === 'deviceHash') return '<td title="' + v + '">' + String(v).substring(0,10) + '...</td>';
+            if (typeof v === 'number') return '<td>' + num(v) + '</td>';
+            return '<td>' + v + '</td>';
+        }).join('')}</tr>`).join('')
+    }</tbody></table>`;
+}
+
+function renderDeviceHops(rows) {
+    const el = document.getElementById('device-hops');
+    if (!el || !rows || !rows.length) { if (el) el.innerHTML = '<p style="color:var(--text-dim)">No device-hops data</p>'; return; }
+    const cols = ['deviceHash','companyID','uniqueIPs','hitCount','firstSeen','lastSeen'];
+    const labels = ['Device','Company','Unique IPs','Hits','First Seen','Last Seen'];
+    el.innerHTML = `<table class="feed-table"><thead><tr>${labels.map(l=>`<th>${l}</th>`).join('')}</tr></thead><tbody>${
+        rows.slice(0,50).map(r=>`<tr>${cols.map(c=>{
+            let v = r[c];
+            if (v == null) return '<td>--</td>';
+            if (c === 'deviceHash') return '<td title="' + v + '">' + String(v).substring(0,10) + '...</td>';
+            if (typeof v === 'number') return '<td>' + num(v) + '</td>';
+            return '<td>' + v + '</td>';
+        }).join('')}</tr>`).join('')
+    }</tbody></table>`;
+}
+
+function renderSubnets(rows) {
+    const el = document.getElementById('subnet-clusters');
+    if (!el || !rows || !rows.length) { if (el) el.innerHTML = '<p style="color:var(--text-dim)">No subnet data</p>'; return; }
+    const cols = ['subnet24','totalHits','uniqueIPs','uniqueFingerprints','avgBotScore','hasSubnetAlert','firstSeen','lastSeen'];
+    const labels = ['Subnet /24','Hits','IPs','Fingerprints','Avg Bot','Alert','First','Last'];
+    el.innerHTML = `<table class="feed-table"><thead><tr>${labels.map(l=>`<th>${l}</th>`).join('')}</tr></thead><tbody>${
+        rows.slice(0,50).map(r=>`<tr>${cols.map(c=>{
+            let v = r[c];
+            if (v == null) return '<td>--</td>';
+            if (c === 'hasSubnetAlert') return '<td style="color:' + (v ? 'var(--red)' : 'var(--green)') + ';">' + (v ? 'YES' : 'No') + '</td>';
+            if (c === 'avgBotScore') return '<td style="color:' + (v > 60 ? 'var(--red)' : v > 30 ? 'var(--orange)' : 'var(--green)') + ';">' + num(v) + '</td>';
+            if (typeof v === 'number') return '<td>' + num(v) + '</td>';
+            return '<td>' + v + '</td>';
+        }).join('')}</tr>`).join('')
+    }</tbody></table>`;
+}
+
+function renderPipelineHealth(data) {
+    const el = document.getElementById('pipeline-health');
+    if (!el || !data) { if (el) el.innerHTML = '<p style="color:var(--text-dim)">No pipeline data</p>'; return; }
+    const pairs = [
+        ['Raw Rows', data.rawRows],
+        ['Parsed Rows', data.parsedRows],
+        ['Device Rows', data.deviceRows],
+        ['IP Rows', data.ipRows],
+        ['Match Rows', data.matchRows],
+        ['Matches Pending', data.matchesPending],
+        ['Matches Resolved', data.matchesResolved],
+        ['Parse Lag', data.parseLag],
+        ['Match Lag', data.matchLag],
+        ['Parse Last Run', data.parseLastRunAt],
+        ['Match Last Run', data.matchLastRunAt],
+    ];
+    el.innerHTML = `<table class="feed-table"><thead><tr><th>Metric</th><th>Value</th></tr></thead><tbody>${
+        pairs.map(([k,v])=>`<tr><td>${k}</td><td>${v != null ? (typeof v==='number' ? num(v) : v) : '--'}</td></tr>`).join('')
+    }</tbody></table>`;
+}
+
+function renderRemediations(rows) {
+    const el = document.getElementById('remediation-log');
+    if (!el || !rows || !rows.length) { if (el) el.innerHTML = '<p style="color:var(--text-dim)">No remediations</p>'; return; }
+    const cols = ['id','issueType','description','detectedAtUtc','executedAtUtc','executedBy'];
+    const labels = ['ID','Issue','Description','Detected','Executed','By'];
+    el.innerHTML = `<table class="feed-table"><thead><tr>${labels.map(l=>`<th>${l}</th>`).join('')}</tr></thead><tbody>${
+        rows.slice(0,50).map(r=>`<tr>${cols.map(c=>`<td>${r[c] != null ? r[c] : '--'}</td>`).join('')}</tr>`).join('')
+    }</tbody></table>`;
+}
+
+// ============================================================================
 // REFRESH LOOP â€” Only active view fetches & renders
 // ============================================================================
 // ============================================================================
@@ -3451,6 +3656,10 @@ const OPS_STEPS = [
     render() { renderXavierSync(lastData.xavierSync); }},
   { name: 'FEED', contestant: 'GEM', fn: API.recent, key: 'recent',
     render() { renderOpsFeed(lastData.recent); }},
+  { name: 'PIPELINE', contestant: 'DUMONT', fn: API.pipeline, key: 'pipeline',
+    render() { renderPipelineHealth(lastData.pipeline); }},
+  { name: 'REMEDIATE', contestant: 'BECK', fn: API.remediations, key: 'remediations',
+    render() { renderRemediations(lastData.remediations); }},
 ];
 
 // Analytics view: 10 sequential calls â€” each section pops in as data arrives
@@ -3475,6 +3684,22 @@ const ANALYTICS_STEPS = [
     render() { renderFingerprints(lastData.fingerprints); }},
   { name: 'DEVICES', contestant: 'FLYNN', fn: API.devices, key: 'devices',
     render() { renderDevices(lastData.devices); }},
+  { name: 'SESSIONS', contestant: 'DUMONT', fn: API.sessions, key: 'sessions',
+    render() { renderSessions(lastData.sessions); }},
+  { name: 'DEAD-NET', contestant: 'BECK', fn: API.deadInternet, key: 'deadInternet',
+    render() { renderDeadInternet(lastData.deadInternet); }},
+  { name: 'QUALITY', contestant: 'CYRUS', fn: API.custQuality, key: 'custQuality',
+    render() { renderCustomerQuality(lastData.custQuality); }},
+  { name: 'CROSS-CX', contestant: 'PAIGE', fn: API.crossCustomer, key: 'crossCustomer',
+    render() { renderCrossCustomer(lastData.crossCustomer); }},
+  { name: 'TRAVEL', contestant: 'ABLE', fn: API.impossTravel, key: 'impossTravel',
+    render() { renderImpossibleTravel(lastData.impossTravel); }},
+  { name: 'LIFECYCLE', contestant: 'ISO', fn: API.deviceLife, key: 'deviceLife',
+    render() { renderDeviceLifecycle(lastData.deviceLife); }},
+  { name: 'HOPS', contestant: 'DYSON', fn: API.deviceHops, key: 'deviceHops',
+    render() { renderDeviceHops(lastData.deviceHops); }},
+  { name: 'SUBNETS', contestant: 'CROM', fn: API.subnets, key: 'subnets',
+    render() { renderSubnets(lastData.subnets); }},
 ];
 
 async function runPipeline(steps) {
