--- a/SmartPiXL/wwwroot/atlas.html
+++ b/SmartPiXL/wwwroot/atlas.html
@@ -3,11 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SmartPiXL &mdash; Atlas</title>
-
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <title>SmartPiXL &mdash; Atlas (Redirecting)</title>
+    <meta http-equiv="refresh" content="0; url=http://localhost:7500/atlas">
+    <style>body{background:#060a13;color:#94a3b8;font-family:Inter,sans-serif;display:flex;align-items:center;justify-content:center;min-height:100vh;margin:0}a{color:#60a5fa}</style>
+</head>
+<body>
+    <p>Atlas has moved to Sentinel. <a href="http://localhost:7500/atlas">Click here</a> if not redirected.</p>
+</body>
+</html>
+<!--
+    ORIGINAL ATLAS.HTML BELOW — PRESERVED FOR REFERENCE
+    Atlas now lives on SmartPiXL Sentinel (port 7500)
+    The Edge does not have /api/atlas/* endpoints.
+-->
+<!--
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
 
     <!-- Mermaid.js -->
